llvm/dev/quicksort.llvm.bc.err
/Users/cmk/llvm/bin/llvm-as: llvm/dev/quicksort.llvm:1:1: error: expected top-level entity
LogError: Unknown function referenced
^
